# whatsabi

./: .gitignore  README.md  lib  package-lock.json  test.sh  vite.config.js
examples/: autoload.js  autoload.ts  benchmark-selectors.js  bytecode.js  dot.js  proxy.js  resolveproxy.js  resolveproxy.ts
lib.cjs/: abi.js  abi.js.map  auto.js  auto.js.map  autoload.js  autoload.js.map  disasm.js  disasm.js.map  errors.js  errors.js.map  index.js  index.js.map  interfaces.js  interfaces.js.map  loaders.d.ts  loaders.js  loaders.js.map  opcodes.js  opcodes.js.map  providers.d.ts  providers.js  providers.js.map  proxies.d.ts  proxies.js  proxies.js.map  proxy.d.ts  proxy.js  proxy.js.map  selectors.js  selectors.js.map  slots.d.ts  slots.js  slots.js.map  utils.d.ts  utils.js  utils.js.map  whatsabi.js  whatsabi.js.map
lib.esm/: abi.js.map  auto.js.map  autoload.js  autoload.js.map  disasm.js  disasm.js.map  errors.d.ts  errors.js  errors.js.map  interfaces.js.map  loaders.d.ts  loaders.js  loaders.js.map  providers.js  providers.js.map  proxies.d.ts  proxies.js  proxies.js.map  proxy.js  proxy.js.map  selectors.js.map  slots.d.ts  slots.js  slots.js.map  types.js  types.js.map  utils.js  utils.js.map
lib.types/: autoload.d.ts  autoload.d.ts.map  errors.d.ts  errors.d.ts.map  loaders.d.ts  loaders.d.ts.map  providers.d.ts  providers.d.ts.map  proxies.d.ts  proxies.d.ts.map  proxy.d.ts  (+4 more)
whatsabi-rs/: Cargo.toml  README.md
whatsabi-rs/src/: disasm.rs  fixtures.rs  lib.rs  opcodes.rs  providers.rs  proxies.rs  slots.rs  utils.rs
whatsabi-rs/tests/: proxy_tests.rs
(+42 files in other folders)
